--- a/.tmux.config
+++ b/.tmux.config
@@ -24,5 +24,8 @@ set -g @plugin 'fabioluciano/tmux-tokyo-night'
 #set -g @theme_right_separator ''
 
 set -g status-position top
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 run '~/.tmux/plugins/tpm/tpm'
